# theorist

./: CITATION.cff  LICENSE  README.md  pyproject.toml  theorist.py
.github/workflows/: benchmark.yml  test.yml
examples/: autoresearch.py  ml_training.py  multi_domain.py  quickstart.py
src/theorist/: __init__.py  __main__.py  brain.py  cli.py  compare.py  core.py  engine.py  experiment.py  smart.py  surprise.py  types.py
tests/: test_core.py
