[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theorist"
version = "0.1.0"
description = "Prediction-error learning for optimization. Every experiment makes the brain smarter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Johan David Bonilla", email = "johanity@users.noreply.github.com"}]
keywords = ["optimization", "meta-learning", "prediction-error", "hyperparameter", "scientific-method", "epistemic-autoresearch", "prediction-error-learning", "transfer-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
smart = ["anthropic>=0.40.0"]

[project.scripts]
theorist = "theorist.cli:main"

[project.urls]
Homepage = "https://github.com/johanity/theorist"
Repository = "https://github.com/johanity/theorist"
Paper = "https://github.com/johanity/epistemic-autoresearch"
"Previous Research" = "https://github.com/johanity/barcaui-predicted-karpathy"

[tool.pytest.ini_options]
testpaths = ["tests"]
